# SD_FHW3

./: README.md  docker-compose.yml  postman.json  pyproject.toml
gateway/: Dockerfile  main.py  pyproject.toml
orders/: Dockerfile  main.py  pyproject.toml
orders/api/: routes.py
orders/repository/: repository.py
orders/service/: service.py
payments/: Dockerfile  main.py  pyproject.toml
payments/api/: routes.py
payments/repository/: repository.py
payments/service/: service.py
shared/: __init__.py
shared/infra/: db.py  mq.py
tests/: conftest.py  test_gateway_proxy.py  test_orders_api.py  test_orders_repo.py  test_orders_service.py  test_payments_api.py  test_payments_repo.py  test_payments_service.py
