[tool.poetry]
name = "shop-services"
version = "0.1.0"
description = "Orders & Payments micro-services (scaffold)"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
pydantic = "^2.6"
sqlalchemy = "^2.0"
asyncpg = "^0.29"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
coverage = "^7.5"
