[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API-Gateway для микросервисов Orders & Payments"
authors = ["You <you@example.com>"]
packages = [{ include = "gateway" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
httpx = "^0.27"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
httpx = "^0.27"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
