[tool.poetry]
name = "orders"
version = "0.1.0"
description = "Orders Service"
authors = ["You <you@example.com>"]
packages = [{ include = "orders" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29" }
pydantic = "^2.6"
sqlalchemy = "^2.0"
aiosqlite = "^0.20"
aio-pika = "^9.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
